Ingress_Demo/nginx-pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod2
  labels:
    app: webserver-2
    environment: test
    authorship: sunil
spec:
  containers:
  - name: c1
    image: nginx:latest
    ports:
    - containerPort: 80
