Ingress_Demo/service-np1.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-np-1
spec: 
  type: NodePort
  selector:
    app: webserver-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30009
