Ingress_Demo/service-np2.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-np-2
spec: 
  type: NodePort
  selector:
    app: webserver-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32350
