Ingress_Demo/service-np3.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-np-3
spec: 
  type: NodePort
  selector:
    app: webserver-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30424
